nodejs-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nodejs-sample
spec:
    ports:
      - port: 8080
        targetPort: 8080
    selector:
      app: nodejs-sample
