nodejs-sample/route.yaml
apiVersion: route.openshift.io/v1
kind: Route 
metadata:
    name: nodejs-sample
spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: nodejs-sample
